--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3111,6 +3111,17 @@
   timestamp = {2021.09.16},
 }
 
+@InProceedings{Bavaud2022,
+  author        = {Bavaud, F. and Metrailler, C.},
+  title         = {A (dis)similarity index for comparing two character networks},
+  booktitle     = {Workshop on Computational Methods in the Humanities},
+  year          = {2022},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2022.06.23},
+  url           = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_7.pdf},
+}
+
 @Article{Bavelas1948,
   author    = {Bavelas, A.},
   title     = {A Mathematical Model for Group Structures},
@@ -10885,6 +10896,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://global.oup.com/academic/product/the-emergence-of-dreaming-9780190673420},
 }
 
+@Article{Domhoff2019,
+  author    = {Domhoff, G. W.},
+  title     = {The neurocognitive theory of dreams at age 20: An assessment and a comparison with four other theories of dreaming},
+  journal   = {Dreaming},
+  year      = {2019},
+  volume    = {29},
+  number    = {4},
+  pages     = {265-302},
+  doi       = {10.1037/drm0000119},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
 @InProceedings{Domingos2001,
   author    = {Domingos, P. and Richardson, M.},
   title     = {Mining the network value of customers},
@@ -16660,6 +16684,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.jstor.org/stable/40552400},
 }
 
+@InProceedings{Guex2022,
+  author    = {Guex , G.},
+  title     = {Refining Character Relationships in a Narrative using Embeddings of Interactions},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+  url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_16.pdf},
+}
+
 @InProceedings{Guha2015,
   author    = {Guha, T. and Kumar, N. and Narayanan, S. S. and Smith, S. L.},
   title     = {Computationally deconstructing movie narratives: an informatics approach},
@@ -17829,6 +17863,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/223904.223912},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Book{Hebb1949,
+  title     = {The organization of behavior: A neuropsychological theory},
+  publisher = {John Wiley},
+  year      = {1949},
+  author    = {Hebb, D. O.},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+  url       = {https://www.routledge.com/The-Organization-of-Behavior-A-Neuropsychological-Theory/Hebb/p/book/9780415654531},
 }
 
 @Article{HeeLinWang2006,
@@ -22217,6 +22261,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/papers/R/R11/R11-1025/},
+}
+
+@Article{Klepel2019,
+  author    = {Klepel, F. and Schredl, M.},
+  title     = {Correlation of task-related dream content with memory performance of a film task – A pilot study},
+  journal   = {International Journal of Dream Research},
+  year      = {2019},
+  volume    = {12},
+  number    = {1},
+  pages     = {112-118},
+  doi       = {10.11588/IJODR.2019.1.59320},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
 }
 
 @Book{Klien2002,
@@ -28803,6 +28860,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@InProceedings{Metrailler2022,
+  author    = {Métrailler , C.},
+  title     = {Narrative flow: a formal approach of character network generation for non-linear narratives},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+  url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_8.pdf},
+}
+
 @Book{Metz1990,
   title     = {Film Language: A Semiotics of the Cinema},
   publisher = {University of Chicago Press},
@@ -35349,6 +35416,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.22},
 }
 
+@InCollection{Revonsuo2015,
+  author    = {Revonsuo, A. and Tuominen, J. and Valli, K.},
+  title     = {The Avatars in the Machine},
+  booktitle = {Open Mind},
+  publisher = {Mind Group},
+  year      = {2015},
+  pages     = {1-28},
+  doi       = {10.15502/9783958570375},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
 @InProceedings{Reynar1997,
   author    = {Reynar, J. C. and Ratnaparkhi, A.},
   title     = {A maximum entropy approach to identifying sentence boundaries},
@@ -37942,6 +38021,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.21},
 }
 
+@Article{Schredl2003a,
+  author    = {Schredl, M.},
+  title     = {Continuity between waking and dreaming: a proposal for a mathematical model},
+  journal   = {Sleep and Hypnosis},
+  year      = {2003},
+  volume    = {5},
+  pages     = {38-52},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+  url       = {https://psycnet.apa.org/record/2003-03507-005},
+}
+
 @Article{Schredl2010,
   author    = {Schredl, M.},
   title     = {Characteristics And Contents Of Dreams},
@@ -37978,6 +38069,81 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.11588/IJODR.2013.2.11055},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Article{Schredl2018,
+  author    = {Schredl, M.},
+  title     = {Reminiscences of love: Former romantic partners in dreams},
+  journal   = {International Journal of Dream Research},
+  year      = {2018},
+  volume    = {11},
+  number    = {1},
+  pages     = {69-73},
+  doi       = {10.11588/IJODR.2018.1.43842},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
+@Book{Schredl2018a,
+  title     = {Researching Dreams: The Fundamentals},
+  publisher = {Palgrave Macmillan},
+  year      = {2018},
+  author    = {Schredl, M.},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+  url       = {https://books.google.fr/books/about/Researching_Dreams.html?id=KW5oDwAAQBAJ},
+}
+
+@Article{Schredl2020,
+  author    = {Schredl, M. and Cadiñanos Echevarria, N. and Saint Macary, L. and Weiss, A. F.},
+  title     = {Partners and ex-partners in dreams: An online survey},
+  journal   = {International Journal of Dream Research},
+  year      = {2020},
+  volume    = {13},
+  number    = {2},
+  pages     = {274-280},
+  doi       = {10.11588/IJODR.2020.2.75338},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
+@Article{Schredl2021,
+  author    = {Schredl, M.},
+  title     = {Family members in a long dream series},
+  journal   = {International Journal of Dream Research},
+  year      = {2021},
+  volume    = {14},
+  number    = {2},
+  pages     = {323–326},
+  doi       = {10.11588/IJODR.2021.2.82662},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
+@Article{Schredl2021a,
+  author    = {Schredl, M. and Cadiñanos Echevarria, N. and Saint Macary, L. and Weiss, A. F.},
+  title     = {Dreaming About One's Own Children: An Online Survey},
+  journal   = {Imagination, Cognition and Personality},
+  year      = {2021},
+  volume    = {41},
+  number    = {2},
+  pages     = {222-237},
+  doi       = {10.1177/02762366211017421},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
+@Article{Schredl2021b,
+  author    = {Schredl, M. and Wood, L. C.},
+  title     = {Partners and Ex-Partners in Dreams: A Diary Study},
+  journal   = {Clocks \& Sleep},
+  year      = {2021},
+  volume    = {3},
+  number    = {2},
+  pages     = {289-297},
+  doi       = {10.3390/clockssleep3020018},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
 }
 
 @Article{Schredl2022,
@@ -42744,6 +42910,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.22},
 }
 
+@Article{Tuominen2021,
+  author    = {Tuominen, J. and Olkoniemi, H. and Revonsuo, A. and Valli, K.},
+  title     = {`No Man is an Island': Effects of social seclusion on social dream content and {REM} sleep},
+  journal   = {British Journal of Psychology},
+  year      = {2021},
+  volume    = {113},
+  number    = {1},
+  pages     = {84-104},
+  doi       = {10.1111/bjop.12515},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
+}
+
 @Article{Turcotte2002,
   author    = {Turcotte, D. L. and Rundle, J. B.},
   title     = {Self-organized complexity in the physical, biological, and social sciences},
@@ -43429,6 +43608,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.19},
 }
 
+@InProceedings{Vilenchik2022,
+  author        = {Vilenchik, D. and Marienberg-Milikowsky , I.},
+  title         = {Highlighted Gaps: Toward Undogmatic Modeling of Literary Character Networks},
+  booktitle     = {Workshop on Computational Methods in the Humanities},
+  year          = {2022},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2022.06.23},
+  url           = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_17.pdf},
+}
+
 @InProceedings{Vinciarelli2007,
   author    = {Vinciarelli, A. and Fernandez, F. and Favre, S.},
   title     = {Semantic Segmentation of Radio Programs using Social Network Analysis and Duration Distribution Modeling},
@@ -43962,6 +44152,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf01542062},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Wamsley2019,
+  author    = {Wamsley, E. J. and Stickgold, R.},
+  title     = {Dreaming of a learning task is associated with enhanced memory consolidation: Replication in an overnight sleep study},
+  journal   = {Journal of Sleep Research},
+  year      = {2019},
+  volume    = {28},
+  number    = {1},
+  pages     = {e12749},
+  doi       = {10.1111/jsr.12749},
+  owner     = {Vincent},
+  timestamp = {2022.06.23},
 }
 
 @InProceedings{Wan2018,
