--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3111,6 +3111,17 @@
   timestamp = {2021.09.16},
 }
 
+@Article{Baumgarten2019,
+  author    = {Baumgarten, L. and Bornholdt, S.},
+  title     = {Critical excitation-inhibition balance in dense neural networks},
+  journal   = {Physical Review E},
+  year      = {2019},
+  volume    = {100},
+  doi       = {10.1103/physreve.100.010301},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+}
+
 @InProceedings{Bavaud2022,
   author        = {Bavaud, F. and Metrailler, C.},
   title         = {A (dis)similarity index for comparing two character networks},
@@ -9903,6 +9914,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aclweb.org/anthology/P07-1033/},
 }
 
+@Article{Davidsen2002,
+  author    = {Davidsen, J. and Ebel, H. and Bornholdt, S.},
+  title     = {Emergence of a Small World from Local Interactions: Modeling Acquaintance Networks},
+  journal   = {Physical Review Letters},
+  year      = {2002},
+  volume    = {88},
+  number    = {12},
+  pages     = {128701},
+  doi       = {10.1103/PhysRevLett.88.128701},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Davidson2000,
   author    = {Davidson, R. J. and Jackson, D. C. and Kalin, N. H.},
   title     = {Emotion, plasticity, context, and regulation: Perspectives from affective neuroscience.},
@@ -12887,6 +12911,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1527/tjsai.B-H42},
   owner     = {Vincent},
   timestamp = {2017.11.04},
+}
+
+@Article{Fan2020c,
+  author    = {Fan, C.},
+  title     = {Research on Relationships of Characters in the Dream of the Red Chamber Based on Co-word Analysis},
+  journal   = {ICIC Express Letters Part B: Applications},
+  year      = {2020},
+  volume    = {11},
+  number    = {5},
+  pages     = {493-500},
+  doi       = {10.24507/icicelb.11.05.493},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
 }
 
 @Article{Fan2021,
@@ -19160,6 +19197,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Article{Hu2017a,
+  author    = {Hu, K. and Qi, K. and Guan, Q. and Wu, C. and Yu, J. and Qing, Y. and Zheng, J. and Wu, H. and Li, X.},
+  title     = {A Scientometric Visualization Analysis for Night-Time Light Remote Sensing Research from 1991 to 2016},
+  journal   = {Remote Sensing},
+  year      = {2017},
+  volume    = {9},
+  number    = {8},
+  pages     = {802},
+  doi       = {10.3390/rs9080802},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+}
+
+@Article{Hu2019,
+  author    = {Hu, K. and Liu, J. and Li, B. and Liu, L. and Taghi Gharibzahedi, S. M. and Su, Y. and Jiang, Y. and Tan, J. and Wang, Y. and Guo, Y.},
+  title     = {Global research trends in food safety in agriculture and industry from 1991 to 2018: A data-driven analysis},
+  journal   = {Trends in Food Science \& Technology},
+  year      = {2019},
+  volume    = {85},
+  pages     = {262-276},
+  doi       = {10.1016/j.tifs.2019.01.011},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+}
+
 @InProceedings{Huang2009,
   author    = {Huang, Y. B.},
   title     = {An item based collaborative filtering using item clustering prediction},
@@ -19237,6 +19299,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ijcnn.2019.8852171},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Huang2019a,
+  author    = {Huang, M. and Wang, Z. and Chen, T.},
+  title     = {Analysis on the theory and practice of industrial symbiosis based on bibliometrics and social network analysis},
+  journal   = {Journal of Cleaner Production},
+  year      = {2019},
+  volume    = {213},
+  pages     = {956-967},
+  doi       = {10.1016/j.jclepro.2018.12.131},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
 }
 
 @InProceedings{Huang2020c,
@@ -22476,6 +22550,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.10.14},
 }
 
+@Article{Kolda2014,
+  author        = {Kolda, T. G. and Pinar, A. and Plantenga, T. and Seshadhri, C.},
+  title         = {A scalable generative graph model with community structure},
+  journal       = {SIAM Journal on Scientific Computing},
+  year          = {2014},
+  volume        = {36},
+  number        = {5},
+  pages         = {C424-C452},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1137/130914218},
+  owner         = {Vincent},
+  timestamp     = {2018.08.08},
+}
+
 @InProceedings{Kolesnikov2011,
   author    = {Kolesnikov, A.},
   title     = {Bridging Theatre and Mathematics: a Mathematician's view},
@@ -25183,6 +25271,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cc.gatech.edu/~riedl/pubs/cmn12.pdf},
 }
 
+@InProceedings{Li2012a,
+  author    = {Li, H. and Liu, Y.},
+  title     = {Language models and classification analysis for dream of the red chamber},
+  booktitle = {2nd IEEE International Conference on Cloud Computing and Intelligence Systems},
+  year      = {2012},
+  pages     = {1459-1464},
+  doi       = {10.1109/ccis.2012.6664627},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+}
+
 @Article{Li2012c,
   author    = {Li, H.-J. and Wang, Y. and Wu, L.-Y. and Zhang, J. and Zhang, X.-S.},
   title     = {Potts model based on a Markov process computation solves the community structure problem effectively},
@@ -25220,7 +25319,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Li2014s,
-  author    = {Li, Hui-Jia and Wang, Hao and Chen, Luonan},
+  author    = {Li, H.-J. and Wang, H. and Chen, L.},
   title     = {Measuring robustness of community structure in complex networks},
   journal   = {Europhysics Letters},
   year      = {2014},
@@ -25271,7 +25370,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Li2015b,
-  author    = {Li, Hui-Jia and Daniels, Jasmine J.},
+  author    = {Li, H.-J. and Daniels, J. J.},
   title     = {Social significance of community structure: Statistical view},
   journal   = {Physical Review E},
   year      = {2015},
@@ -26668,7 +26767,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Lusseau2003a,
-  author    = {Lusseau, David and Schneider, Karsten and Boisseau, Oliver J. and Haase, Patti and Slooten, Elisabeth and Dawson, Steve M.},
+  author    = {Lusseau, D. and Schneider, K. and Boisseau, O. J. and Haase, P. and Slooten, E. and Dawson, S. M.},
   title     = {The bottlenose dolphin community of Doubtful Sound features a large proportion of long-lasting associations},
   journal   = {Behavioral Ecology and Sociobiology},
   year      = {2003},
@@ -32341,6 +32440,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/08838150701626487},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@Article{Ortiz2022,
+  author    = {Ortiz, I.},
+  title     = {Selfies with Emma: Jane Austen’s Social Media},
+  journal   = {Studies in the Novel},
+  year      = {2022},
+  volume    = {54},
+  number    = {2},
+  pages     = {159-178},
+  owner     = {Vincent},
+  timestamp = {2022.06.25},
+  url       = {https://muse.jhu.edu/article/857676/summary},
 }
 
 @Article{Ortuo2002,
@@ -38762,7 +38874,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Shang2012,
-  author    = {Shang, Jiaxing and Liu, Lianchen and Xie, Feng and Chen, Zhen and Miao, Jiajia and Fang, Xuelin and Wu, Cheng},
+  author    = {Shang, J. and Liu, L. and Xie, F. and Chen, Z. and Miao, J. and Fang, X. and Wu, C.},
   title     = {A Real-Time Detecting Algorithm for Tracking Community Structure of Dynamic Networks},
   booktitle = {6th SNA-KDD Workshop Proceedings},
   year      = {2012},
@@ -45897,6 +46009,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.19},
 }
 
+@Article{Xie2020a,
+  author    = {Xie, J. and Hu, K. and Zhu, M. and Guo, Y.},
+  title     = {Data-driven analysis of global research trends in bioacoustics and ecoacoustics from 1991 to 2018},
+  journal   = {Ecological Informatics},
+  year      = {2020},
+  volume    = {57},
+  pages     = {101068},
+  doi       = {10.1016/j.ecoinf.2020.101068},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+}
+
 @Article{XiweiTang2014,
   author    = {Tang, X. and Wang, J. and Zhong, J. and Pan, Y.},
   title     = {Predicting Essential Proteins Based on Weighted Degree Centrality},
@@ -47700,6 +47824,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/asi.23603},
   owner     = {Vincent},
   timestamp = {2021.07.24},
+}
+
+@Article{Zhou2015c,
+  author    = {Zhou, Q. and Leydesdorff, L.},
+  title     = {The normalization of occurrence and Co-occurrence matrices in bibliometrics using Cosine similarities and Ochiai coefficients},
+  journal   = {Journal of the Association for Information Science and Technology},
+  year      = {2015},
+  volume    = {67},
+  number    = {11},
+  pages     = {2805-2814},
+  doi       = {10.1002/asi.23603},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
 }
 
 @Article{Zhou2015g,
