--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -21274,6 +21274,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Karlgren1952,
+  author    = {Karlgren, B.},
+  title     = {New excursions in Chinese grammar},
+  journal   = {Bulletin of the Museum of Far Eastern Antiquities},
+  year      = {1952},
+  volume    = {24},
+  pages     = {51-80},
+  owner     = {Vincent},
+  timestamp = {2022.06.26},
+  url       = {https://catalogue.nla.gov.au/Record/965590},
+}
+
 @InProceedings{Karlgren1994,
   author    = {Karlgren, J. and Cutting, D.},
   title     = {Recognizing text genres with simple metrics using discriminant analysis},
