--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1481,6 +1481,17 @@
   url       = {https://dl.acm.org/citation.cfm?id=2390991},
 }
 
+@InProceedings{Angelidis2019,
+  author    = {Angelidis, S. and Frermann, L. and Marcheggiani, D. and Blanco, R. and Màrquez, L.},
+  title     = {Book {QA}: Stories of Challenges and Opportunities},
+  booktitle = {2nd Workshop on Machine Reading for Question Answering},
+  year      = {2019},
+  pages     = {78-85},
+  doi       = {10.18653/v1/d19-5811},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @InProceedings{Anggraini2015,
   author    = {Anggraini, D. and Madenda, S. and Wibowo, E. P. and Boumedjout, L.},
   title     = {Network Disintegration in Criminal Network},
@@ -4638,6 +4649,17 @@
   url       = {http://www.gallimard.fr/Catalogue/GALLIMARD/NRF-Essais/De-la-justification},
 }
 
+@InProceedings{Bommasani2020,
+  author    = {Bommasani, R. and Davis, K. and Cardie, C.},
+  title     = {Interpreting Pretrained Contextualized Representations via Reductions to Static Embeddings},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {4758-4781},
+  doi       = {10.18653/v1/2020.acl-main.431},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Article{Bonacich1972,
   author    = {Bonacich, P.},
   title     = {Factoring and weighting approaches to status scores and clique identification},
@@ -5378,6 +5400,17 @@
   doi       = {10.1007/978-3-642-01284-6_3},
   owner     = {Vincent},
   timestamp = {2017.03.14},
+}
+
+@InProceedings{Brahman2021,
+  author    = {Brahman, F. and Huang, M. and Tafjord, O. and Zhao, C. and Sachan, M. and Chaturvedi, S.},
+  title     = {``Let Your Characters Tell Their Story'': A Dataset for Character-Centric Narrative Understanding},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2021},
+  pages     = {1734-1752},
+  doi       = {10.18653/v1/2021.findings-emnlp.150},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @InProceedings{Bramsen2011,
@@ -9083,6 +9116,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.13},
 }
 
+@Article{Cortes1995,
+  author    = {Cortes, C. and Vapnik, V.},
+  title     = {Support-vector networks},
+  journal   = {Machine Learning},
+  year      = {1995},
+  volume    = {20},
+  number    = {3},
+  pages     = {273-297},
+  doi       = {10.1007/BF00994018},
+  owner     = {Vincent},
+  timestamp = {2010.10.05},
+}
+
 @InCollection{Cosentino1998,
   author    = {Cosentino, D. J.},
   title     = {African Oral Narrative Traditions},
@@ -12664,6 +12710,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2011.11.15},
   url       = {http://strathprints.strath.ac.uk/34153/},
+}
+
+@InProceedings{Ethayarajh2019,
+  author    = {Ethayarajh, K.},
+  title     = {How Contextual are Contextualized Word Representations? Comparing the Geometry of {BERT}, {ELMo}, and {GPT}-2 Embeddings},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {55-65},
+  doi       = {10.18653/v1/d19-1006},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @InProceedings{Eude1994,
@@ -17569,6 +17626,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books/about/Third_Person.html?id=LE42vgAACAAJ},
 }
 
+@Article{Harris1954,
+  author    = {Harris, Z. S.},
+  title     = {Distributional Structure},
+  journal   = {Word},
+  year      = {1954},
+  volume    = {10},
+  number    = {2-3},
+  pages     = {146-162},
+  doi       = {10.1080/00437956.1954.11659520},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Book{Harris2010,
   title     = {Shakespeare and Literary Theory},
   publisher = {Oxford University Press},
@@ -18224,6 +18294,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://litlab.stanford.edu/LiteraryLabPamphlet13.pdf},
+}
+
+@InProceedings{Hewitt2019,
+  author    = {Hewitt, J. and Manning, C. D.},
+  title     = {A Structural Probe for Finding Syntax in Word Representations},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {4129-4138},
+  doi       = {10.18653/v1/n19-1419},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @Article{Heyd2010,
@@ -22078,6 +22159,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/N19-1067.pdf},
 }
 
+@InProceedings{Kim2020,
+  author    = {Kim, A. and Pethe, C. and Skiena, S.},
+  title     = {What time is it? Temporal Analysis of Novels},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {9076-9086},
+  doi       = {10.18653/v1/2020.emnlp-main.730},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @PhdThesis{Kim2020a,
   author      = {Kim , E.},
   title       = {Emotions in Literature: Computational Modelling in the Context of Genres and Characters},
@@ -22087,6 +22179,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2020.10.30},
   url         = {http://elib.uni-stuttgart.de/bitstream/11682/11098/1/dissertation.pdf},
+}
+
+@InProceedings{Kim2021,
+  author    = {Kim, A. and Pethe, C. and Inoue, N. and Skiena, S.},
+  title     = {Cleaning Dirty Books: Post-{OCR} Processing for Previously Scanned Texts},
+  booktitle = {Findings of the Association for Computational Linguistics},
+  year      = {2021},
+  pages     = {4217-4226},
+  doi       = {10.18653/v1/2021.findings-emnlp.356},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @Article{King2009,
@@ -22456,6 +22559,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www-cs-faculty.stanford.edu/~knuth/sgb.html},
 }
 
+@InProceedings{Kobayashi2016,
+  author    = {Kobayashi, S. and Tian, R. and Okazaki, N. and Inui, K.},
+  title     = {Dynamic Entity Representation with Max-pooling Improves Machine Reading},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2016},
+  pages     = {850-855},
+  doi       = {10.18653/v1/n16-1099},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Book{Koch2009,
   title     = {The Modern Library Writer's Workshop: A Guide to the Craft of Fiction},
   publisher = {Modern Library},
@@ -22490,6 +22604,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tvcg.2014.2346677},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@Article{Kocisky2017,
+  author    = {Kočiský, T. and Schwarz, J. and Blunsom, P. and Dyer, C. and Hermann, K. M. and Melis, G. and Grefenstette, E.},
+  title     = {The narrativeqa reading comprehension challenge},
+  journal   = {arXiv},
+  year      = {2017},
+  volume    = {cs.CL},
+  pages     = {1712.07040},
+  doi       = {10.48550/arXiv.1712.07040},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @Article{Koehly1998,
@@ -32493,6 +32619,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.01.18},
 }
 
+@InProceedings{Otake2020,
+  author    = {Otake, T. and Yokoi, S. and Inoue, N. and Takahashi, R. and Kuribayashi, T. and Inui, K.},
+  title     = {Modeling Event Salience in Narratives via Barthes' Cardinal Functions},
+  booktitle = {28th International Conference on Computational Linguistics},
+  year      = {2020},
+  pages     = {1784-1794},
+  doi       = {10.18653/v1/2020.coling-main.160},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Article{Otsuka2005,
   author    = {Otsuka, I. and Nakane, K. and Divakaran, A. and Hatanaka, K. and Ogawa, M.},
   title     = {A highlight scene detection and video summarization system using audio feature for a personal video recorder},
@@ -32842,6 +32979,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10618-011-0224-z},
   owner     = {Vincent},
   timestamp = {2011.06.18},
+}
+
+@InProceedings{Papalampidi2020,
+  author    = {Papalampidi, P. and Keller, F. and Frermann, L. and Lapata, M.},
+  title     = {Screenplay Summarization Using Latent Narrative Structure},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {1920-1933},
+  doi       = {10.18653/v1/2020.acl-main.174},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @Article{Papamarinopoulos2012,
@@ -33600,6 +33748,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/srep00943},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@InProceedings{Pethe2020,
+  author    = {Pethe, C. and Kim, A. and Skiena, S.},
+  title     = {Chapter Captor: Text Segmentation in Novels},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {8373-8383},
+  doi       = {10.18653/v1/2020.emnlp-main.672},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
+@InProceedings{Petroni2019,
+  author    = {Petroni, F. and Rocktäschel, T. and Riedel, S. and Lewis, P. and Bakhtin, A. and Wu, Y. and Miller, A.},
+  title     = {Language Models as Knowledge Bases?},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
+  year      = {2019},
+  pages     = {2463-2473},
+  doi       = {10.18653/v1/d19-1250},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @Article{Pettigrew1998,
@@ -39093,6 +39263,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.11},
 }
 
+@InProceedings{Shin2020,
+  author    = {Shin, T. and Razeghi, Y. and Logan, R. L. and Wallace, E. and Singh, S.},
+  title     = {{AutoPrompt}: Eliciting Knowledge from Language Models with Automatically Generated Prompts},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {4222-4235},
+  doi       = {10.18653/v1/2020.emnlp-main.346},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @InProceedings{Shirai2016,
   author    = {Shirai, A.},
   title     = {Manga Generator, a future of interactive manga media},
@@ -43932,6 +44113,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://cmc.marmot.org/Record/.b2802400x},
 }
 
+@InProceedings{Voita2020,
+  author    = {Voita, E. and Titov, I.},
+  title     = {Information-Theoretic Probing with Minimum Description Length},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {183-196},
+  doi       = {10.18653/v1/2020.emnlp-main.14},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Article{Volker2020,
   author    = {Volker, B. and Smeets, R.},
   title     = {Imagined social structures: Mirrors or alternatives? A comparison between networks of characters in contemporary Dutch literature and networks of the population in the Netherlands},
@@ -45434,6 +45626,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.18},
 }
 
+@InProceedings{Wilmot2020,
+  author    = {Wilmot, D. and Keller, F.},
+  title     = {Modelling Suspense in Short Stories as Uncertainty Reduction over Neural Representation},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {1763-1788},
+  doi       = {10.18653/v1/2020.acl-main.161},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
+@InProceedings{Wilmot2021,
+  author    = {Wilmot, D. and Keller, F.},
+  title     = {Memory and Knowledge Augmented Language Models for Inferring Salience in Long-Form Stories},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2021},
+  pages     = {851-865},
+  doi       = {10.18653/v1/2021.emnlp-main.65},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
 @Article{Wilson1927,
   author    = {Wilson, J. D.},
   title     = {Act-and scene-divisions in the plays of Shakespeare: a rejoinder to Sir Mark Hunter},
@@ -46582,6 +46796,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.05},
   url       = {https://arxiv.org/abs/1006.2791},
+}
+
+@InProceedings{Ye2017,
+  author    = {Ye, J. and Han, S. and Hu, Y. and Coskun, B. and Liu, M. and Qin, H. and Skiena, S.},
+  title     = {Nationality Classification Using Name Embeddings},
+  booktitle = {ACM Conference on Information and Knowledge Management},
+  year      = {2017},
+  pages     = {1897-1906},
+  doi       = {10.1145/3132847.3133008},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
+}
+
+@InProceedings{Ye2019,
+  author    = {Ye, J. and Skiena, S.},
+  title     = {The Secret Lives of Names?: Name Embeddings from Social Media},
+  booktitle = {25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year      = {2019},
+  pages     = {3000-3008},
+  doi       = {10.1145/3292500.3330751},
+  owner     = {Vincent},
+  timestamp = {2022.06.28},
 }
 
 @InProceedings{Yeh2012,
